--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>20</maven.compiler.source>
         <maven.compiler.target>20</maven.compiler.target>
-        <exec.mainClass>modul.CreditSimulator</exec.mainClass>
+        <exec.mainClass>CreditSimulator</exec.mainClass>
     </properties>
 </project>
