--- a/pom.xml
+++ b/pom.xml
@@ -11,4 +11,23 @@
         <maven.compiler.target>20</maven.compiler.target>
         <exec.mainClass>CreditSimulator</exec.mainClass>
     </properties>
+    <build>
+        <plugins>
+          <plugin>
+            <!-- Build an executable JAR -->
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>3.2.0</version>
+            <configuration>
+              <archive>
+                <manifest>
+                  <addClasspath>true</addClasspath>
+                  <classpathPrefix>lib/</classpathPrefix>
+                  <mainClass>CreditSimulator</mainClass>
+                </manifest>
+              </archive>
+            </configuration>
+          </plugin>
+        </plugins>
+    </build>
 </project>
