--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,10 @@
             <!-- Build an executable JAR -->
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-jar-plugin</artifactId>
-            <version>3.2.0</version>
+            <version>3.1.0</version>
             <configuration>
+                <source>2.0</source> <!-- Sesuaikan dengan versi Java yang Anda miliki -->
+                <target>2.0</target>
               <archive>
                 <manifest>
                   <addClasspath>true</addClasspath>
