--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,10 @@
         <plugins>
           <plugin>
             <!-- Build an executable JAR -->
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-jar-plugin</artifactId>
-            <version>3.1.0</version>
+            <groupId>org.eclipse.m2e</groupId>
+            <artifactId>m2e-compiler-plugin</artifactId>
+            <version>1.10.0</version>
             <configuration>
-                <source>2.0</source> <!-- Sesuaikan dengan versi Java yang Anda miliki -->
-                <target>2.0</target>
               <archive>
                 <manifest>
                   <addClasspath>true</addClasspath>
