--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,9 @@
         <plugins>
           <plugin>
             <!-- Build an executable JAR -->
-            <groupId>org.eclipse.m2e</groupId>
-            <artifactId>m2e-compiler-plugin</artifactId>
-            <version>1.10.0</version>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>3.2.0</version>
             <configuration>
               <archive>
                 <manifest>
